--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 100vh;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Poppins", sans-serif;
 
 }
 .div__01 {
@@ -83,9 +83,12 @@ body {
     
 }
 
+.div3__cadastro {
+    font-family: Arial, Helvetica, sans-serif;
+}
 .div3__cadastro > p {
-    font-weight: 50;
-    margin-top: 20px;
+    font-weight: 100;
+    margin-top: 10px;
     color: white;
 }
 
